Smoke preview in viewport not showing up on some Mac systems #47991

Closed
opened 2016-03-29 17:07:32 +02:00 by Peter Gotlib · 25 comments

OSX10.9.5
3.5 Ghz i7-3770k / 32 GB RAM
Gigabyte GA-Z77Z-UP5 TH MB
Intel HD 4000 Graphics
NVIDIA GTX 770 4GB
2x NVIDIA GTX 780’s 6GB (headless)

Blender Version: 2.77 (hash 22a2853)

Smoke Preview broken in 2.77 on some Mac systems.

Worked fine in previous release on same system under 2.76b (hash f337fea)

Description of error:
Smoke preview in viewport not showing up on some Mac systems. My test file is the simple default cube with smoke quick effect applied.

I am running a Hackintosh with Mac OSX 10.9.5 and the viewport is not showing the smoke preview in 2.77. The smoke preview works perfectly in 2.76b though.

Smoke preview also works in 2.77 on the same system when booted into Windows 8.

In system preferences for 2.77 I have tried setting the Compute Device to all three options (None, CUDA, OpenCL) and all available GPU selections. None of that made a difference as the smoke preview still failed to show in the viewport.

I did test 2.77 on two other Mac systems and smoke preview operated normally on those. One was a 2010 Mac Mini running Yosemite 10.10.5 and the other a 2008 Mac Pro running OSX 10.8.4.

OSX10.9.5 3.5 Ghz i7-3770k / 32 GB RAM Gigabyte GA-Z77Z-UP5 TH MB Intel HD 4000 Graphics NVIDIA GTX 770 4GB 2x NVIDIA GTX 780’s 6GB (headless) Blender Version: 2.77 (hash 22a2853) Smoke Preview broken in 2.77 on some Mac systems. Worked fine in previous release on same system under 2.76b (hash f337fea) Description of error: Smoke preview in viewport not showing up on some Mac systems. My test file is the simple default cube with smoke quick effect applied. I am running a Hackintosh with Mac OSX 10.9.5 and the viewport is not showing the smoke preview in 2.77. The smoke preview works perfectly in 2.76b though. Smoke preview also works in 2.77 on the same system when booted into Windows 8. In system preferences for 2.77 I have tried setting the Compute Device to all three options (None, CUDA, OpenCL) and all available GPU selections. None of that made a difference as the smoke preview still failed to show in the viewport. I did test 2.77 on two other Mac systems and smoke preview operated normally on those. One was a 2010 Mac Mini running Yosemite 10.10.5 and the other a 2008 Mac Pro running OSX 10.8.4.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Peter Gotlib self-assigned this 2016-03-29 17:07:32 +02:00
Author

Added subscriber: @pegot

Added subscriber: @pegot

Added subscriber: @Sergey

Added subscriber: @Sergey

Please test latets builds from builder.blender.org and see if the issue still exists in there.

Please test latets builds from builder.blender.org and see if the issue still exists in there.
Author

Tested with latest build dated April 1st, 2016 (hash 42a9f33).

Smoke preview on stated Mac system still does not work.

Tested with latest build dated April 1st, 2016 (hash 42a9f33). Smoke preview on stated Mac system still does not work.
Peter Gotlib was unassigned by Aaron Carlisle 2016-04-03 23:54:37 +02:00

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

I can confirm, both builds, release 2.77 and 42a9f33 don't show smoke in Viewport. Macbook Pro late 3013, 2.6GHz i7, 16GB Ram.

I can confirm, both builds, release 2.77 and 42a9f33 don't show smoke in Viewport. Macbook Pro late 3013, 2.6GHz i7, 16GB Ram.

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin

Then it's a different issue.

Do you have a screenshot of the problem?

@MikeErwin, do you have machine to test this report maybe?

Then it's a different issue. Do you have a screenshot of the problem? @MikeErwin, do you have machine to test this report maybe?

I can make a Screenshot.. But i don't really see the point? Smoke gets calculated - can see in cycles render - but Viewport does not show anything. What would you like to see in a Screenshot?

I can make a Screenshot.. But i don't really see the point? Smoke gets calculated - can see in cycles render - but Viewport does not show anything. What would you like to see in a Screenshot?

Ah, thought it's some artifact or so. Ok, if it's just missing then no screenshot needed.

So then please run blender from the command line and see if there are any error prints happening in there.

Additionally, you can run blender --debug-gpu and attach the log here.

Ah, thought it's some artifact or so. Ok, if it's just missing then no screenshot needed. So then please run blender from the command line and see if there are any error prints happening in there. Additionally, you can run `blender --debug-gpu` and attach the log here.

Screen Shot 2016-04-04 at 11.44.34.png

Screen Shot 2016-04-04 at 11.44.42.png

![Screen Shot 2016-04-04 at 11.44.34.png](https://archive.blender.org/developer/F300690/Screen_Shot_2016-04-04_at_11.44.34.png) ![Screen Shot 2016-04-04 at 11.44.42.png](https://archive.blender.org/developer/F300692/Screen_Shot_2016-04-04_at_11.44.42.png)

Command Line output as you create Smoke Domain.

GPUShader: compile error:
ERROR: 0:8: Attempt to redeclare 'min' as a variable
ERROR: 0:15: Attempt to use 'min' as a variable

Unable to create a GPUShader for builtin shader: 2
Unable to create GLSL smoke shader.
GPUShader: compile error:
ERROR: 0:8: Attempt to redeclare 'min' as a variable
ERROR: 0:15: Attempt to use 'min' as a variable

(Same for blender --debug-gpu or without --debug-gpu)

Command Line output as you create Smoke Domain. ``` GPUShader: compile error: ERROR: 0:8: Attempt to redeclare 'min' as a variable ERROR: 0:15: Attempt to use 'min' as a variable Unable to create a GPUShader for builtin shader: 2 Unable to create GLSL smoke shader. GPUShader: compile error: ERROR: 0:8: Attempt to redeclare 'min' as a variable ERROR: 0:15: Attempt to use 'min' as a variable ``` (Same for blender --debug-gpu or without --debug-gpu)

Committed possible fix. Please grab latest build from https://builder.blender.org/download/ and give it a try!

Committed possible fix. Please grab latest build from https://builder.blender.org/download/ and give it a try!

Thanks Sergey. That fixed it.

(Another Blender A release necessary though, me thinks ;-)

Thanks Sergey. That fixed it. (Another Blender A release necessary though, me thinks ;-)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2016-04-04 13:05:35 +02:00

We will be doing 2.77a one of this days, don't worry.

Thanks for the report, considering it resolved! :)

We will be doing 2.77a one of this days, don't worry. Thanks for the report, considering it resolved! :)
Author

Confirm fixed with my original "problem" system as well. Thanks, you guys are the best!

Confirm fixed with my original "problem" system as well. Thanks, you guys are the best!

Added subscriber: @sourvinos

Added subscriber: @sourvinos

Confirm that the issue reported is still present on 2.77a, with the same error message shown above. (OS X 10.9.5).

Solved in "blender-2.77.0-git20160408.a51e9ec-x86_64"

Thank you

Confirm that the issue reported is still present on 2.77a, with the same error message shown above. (OS X 10.9.5). Solved in "blender-2.77.0-git20160408.a51e9ec-x86_64" Thank you

Hmm. Did this fix made it into 2.77a? I'm asking cause i still have no Smoke Preview on osx with official 2.77a - unlike the buildbot build i tried on 4. April...

Hmm. Did this fix made it into 2.77a? I'm asking cause i still have no Smoke Preview on osx with official 2.77a - unlike the buildbot build i tried on 4. April...

Unfortunately, the revision skipped away from being included into 2.77a :(

Unfortunately, the revision skipped away from being included into 2.77a :(

I wonder... The blender.org official Version 2.77a still does not Work on Mac for Smoke Preview..

I think this is not good situation - it clearly is broken.. There does not seem to be 2.77b release at all?

IMO there must be some kind of Warning for Mac Users that this is broken in that release, or just release a Version that works..

I think that kind of stuff can lead to people avoid blender...

Are there any plans to resolve this?

(I know you can just use a buildbot build - that's not the point though.. The official Version is clearly broken..

I wonder... The blender.org official Version 2.77a still does not Work on Mac for Smoke Preview.. I think this is not good situation - it clearly is broken.. There does not seem to be 2.77b release at all? IMO there must be some kind of Warning for Mac Users that this is broken in that release, or just release a Version that works.. I think that kind of stuff can lead to people avoid blender... Are there any plans to resolve this? (I know you can just use a buildbot build - that's not the point though.. The official Version is clearly broken..

Unfortunately 2.77a doesn't work on some card on Mac.

The plan is to release 2,78. We're at testbuild2 stage and first release candidate is planned at mid this week.

Unfortunately 2.77a doesn't work on some card on Mac. The plan is to release 2,78. We're at testbuild2 stage and first release candidate is planned at mid this week.

Just to inform that on 2.78-testbuild2 (OS X 10.9.5) the viewport smoke preview works fine.

Just to inform that on 2.78-testbuild2 (OS X 10.9.5) the viewport smoke preview works fine.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47991
No description provided.