Smoke: Don't use `min` as an uniform name

This is an attempt to fix report T47991.